objects/Activity.object
<CustomObject>
    <fields>
        <fullName>CRM_Agenda__c</fullName>
        <label>Agenda</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Any_other_resources_needed__c</fullName>
        <label>Any other resources needed?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_BDM_Commitments__c</fullName>
        <label>BDM Commitments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Call_back_time__c</fullName>
        <label>Call back time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_Customer_Commitments__c</fullName>
        <label>Customer Commitments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Date_Actioned__c</fullName>
        <label>Date Actioned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_Meeting_Notes__c</fullName>
        <label>Meeting Notes(Internal Only)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Mid_month_progress_update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mid month progress update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Monthly_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monthly Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Call_Outcome__c</fullName>
        <label>Call Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Received scenario</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead followed up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Proceeding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Not Proceeding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scenario followed up</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Followup_Date__c</fullName>
        <label>Followup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Followup_Tasks__c</fullName>
        <label>Followup Tasks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Meeting_Email_Body__c</fullName>
        <label>Meeting Email Body</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Meeting_Objectives__c</fullName>
        <label>Meeting Objectives</label>
        <picklist>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scenario Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Accreditation Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Accreditation Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feedback Session</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Catch Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Planning</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Meeting_Outcomes__c</fullName>
        <label>Meeting Outcomes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_New_Scenario__c</fullName>
        <label>New Scenario</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Other_Objectives__c</fullName>
        <label>Other Objectives</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Owner_Name__c</fullName>
        <formula>Owner:User.FirstName &amp; &apos; &apos; &amp; Owner:User.LastName</formula>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Send_MoM_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Minutes Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Send_Scenario_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Scenario Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Next_Meeting_Scheduled__c</fullName>
        <label>Next Meeting Scheduled?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Objective__c</fullName>
        <label>Objective - Internal use only</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Outcome_actions__c</fullName>
        <label>Outcome</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_What_data_do_I_need__c</fullName>
        <label>What data do I need?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Who_am_I_targeting__c</fullName>
        <label>Who am I targeting?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_raining_on_boarding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Training &amp; on boarding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DB_Activity_Type__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>IF(CONTAINS( Subject , &quot;Email&quot;), &quot;Email&quot;, IF(CONTAINS( Subject , &quot;Cold Call&quot;), &quot;Cold Call&quot;, IF(CONTAINS( Subject , &quot;Call&quot;), &quot;Call&quot;, IF(CONTAINS( Subject , &quot;Meeting&quot;), &quot;Meeting&quot;, IF(CONTAINS( Subject , &quot;On Site Visit&quot;), &quot;Site Visit&quot;, IF(CONTAINS( Subject , &quot;Quote&quot;), &quot;Send Letter/Quote&quot;, &quot;Other&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>genesis__Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>genesis__Applications__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>genesis__Completion_Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completion Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>genesis__Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>genesis__Department__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>genesis__Is_Parallel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Parallel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>genesis__Task_Setup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task Setup</label>
        <referenceTo>genesis__Task_Setup__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>ACTIVITY_SUBTYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <listViews>
        <fullName>geopointe__Geopointe_Activities_Last_7_Days</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>startsWith</operation>
            <value>Geopointe:</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Geopointe Activities (Last 7 Days)</label>
    </listViews>
    <listViews>
        <fullName>geopointe__Geopointe_Activities_all</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>startsWith</operation>
            <value>Geopointe:</value>
        </filters>
        <label>Geopointe Activities (all)</label>
    </listViews>
    <listViews>
        <fullName>geopointe__Geopointe_Activities_today</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>startsWith</operation>
            <value>Geopointe:</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Geopointe Activities (today)</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>